--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings" : {
+    "Default": "Server=localhost\\SQLEXPRESS; Database=MarketMediaDev; Trusted_Connection=True;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
