--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings" : {
+    "Default": "Server=localhost\\SQLEXPRESS; Database=MarketMedia; Trusted_Connection=True;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
